# drakkar

./: CMakeLists.txt  LICENSE  README.md  drakkarConfig.cmake.in
include/drakkar/: Entity.h
include/drakkar/cameras/: RealSense.h
res/: Elephant.pcd
src/: Entity.cpp
src/cameras/: RealSense.cpp
tools/: CMakeLists.txt
tools/matching_example/: matching_example.cpp
